--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "animate.css": "^3.7.2",
         "bootstrap": "^4.4.1",
         "vazir-font": "^21.2.1",
         "vue-persian-datetime-picker": "^2.1.2",
+        "vue-router": "^3.1.5",
         "vuetify": "^2.2.4"
     }
 }
